feat(index): implement new index page

--- a/index.html
+++ b/index.html
@@ -3,17 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scintilla</title>
+    <title>Scintilla v0.1-dev</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&family=Noto+Serif+SC&family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div>Scintilla system loading...</div>
-    <div>Initializing objects (1/5)</div>
-    <div class="err-text">Object 'index.md' not found!</div>
-    <div class="err-text">Loading failed, please contact the system administrator for more information.</div>
-    <div><a href="">⟳REBOOT</a></div>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Gallery</a>
+                <ul style="--list-length: 3;">
+                    <li><a href="404.html">Arts</a></li>
+                    <li><a href="404.html">Poems</a></li>
+                    <li><a href="404.html">Shell</a></li>
+                </ul>
+            </li>
+            <li><a href="404.html">Desktop</a></li>
+            <li><a href="404.html">Box</a></li>
+            <li><a href="404.html">About</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section class="main">
+            <h1>Scintilla<sup>v0.1-dev</sup></h1>
+            <div><img src="assets/white_cliff.webp" alt="White Cliff"></div>
+        </section>
+        <section class="art-collection">
+            <figure>
+                <div><img src="assets/hug.webp"></div>
+                <figcaption>如果说时间是一个空间的定义词，或者说时间根本不存在</figcaption>
+            </figure>
+            <figure>
+                <figcaption>对于创作而言，痛苦意味着什么呢</figcaption>
+                <div><img src="assets/animism_studio.webp"></div>
+                <figcaption>或许是无尽的灵感</figcaption>
+            </figure>
+            <figure>
+                <figcaption>神秘而绝望的，癫狂的舞蹈，直至生命尽头</figcaption>
+                <div><img src="assets/Сон169.webp"></div>
+            </figure>
+        </section>
+    </main>
+    <footer>
+        <div>© 2024 KAMIHARI</div>
+        <div>All Content Licensed by <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a></div>
+        <div>Powered by Atlantics (v0.1-alpha manual mode)</div>
+    </footer>
+    <script src="js/index.js"></script>
 </body>
 </html>
