feat(index): implement new title page design

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Scintilla v0.1-dev</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400&family=Noto+Serif+SC&family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:wght@400;700&family=Roboto:wght@400&family=Noto+Serif+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -26,9 +26,26 @@
         </ul>
     </nav>
     <main>
-        <section class="main">
-            <h1>Scintilla<sup>v0.1-dev</sup></h1>
-            <div><img src="assets/white_cliff.webp" alt="White Cliff"></div>
+        <section class="title">
+            <h1>
+                <div>S</div>
+                <div>c</div>
+                <div>i</div>
+                <div>n</div>
+                <div>t</div>
+                <div>i</div>
+                <div>l</div>
+                <div>l</div>
+                <div>α</div>
+            </h1>
+            <figure class="double-layer">
+                <img src="assets/white_cliff.webp" alt="White Cliff">
+                <figcaption>
+                    <div>Scintilla</div>
+                    <div>v0.1-dev</div>
+                    <div>Powered by Atlantics (v0.1-alpha manual mode)</div>
+                </figcaption>
+            </figure>
         </section>
         <section class="art-collection">
             <figure>
@@ -49,7 +66,6 @@
     <footer>
         <div>© 2024 KAMIHARI</div>
         <div>All Content Licensed by <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a></div>
-        <div>Powered by Atlantics (v0.1-alpha manual mode)</div>
     </footer>
     <script src="js/index.js"></script>
 </body>
