fix(index): fix image sizing issue

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <div>α</div>
             </h1>
             <figure class="double-layer">
-                <img src="assets/white_cliff.webp" alt="White Cliff">
+                <img class="back" src="assets/white_cliff_grey_dots.webp" alt="White Cliff">
+                <img class="front" src="assets/white_cliff.webp" alt="White Cliff">
                 <figcaption>
                     <div>Scintilla</div>
                     <div>v0.1-dev</div>
