refactor(index): change title element type

--- a/index.html
+++ b/index.html
@@ -27,17 +27,7 @@
     </nav>
     <main>
         <section class="title">
-            <h1>
-                <div>S</div>
-                <div>c</div>
-                <div>i</div>
-                <div>n</div>
-                <div>t</div>
-                <div>i</div>
-                <div>l</div>
-                <div>l</div>
-                <div>α</div>
-            </h1>
+            <h1><span>S</span><span>c</span><span>i</span><span>n</span><span>t</span><span>i</span><span>l</span><span>l</span><span>α</span></h1>
             <figure class="double-layer">
                 <img class="back" src="assets/white_cliff_grey_dots.webp" alt="White Cliff">
                 <img class="front" src="assets/white_cliff.webp" alt="White Cliff">
