feat(index): implement dream page layout and basic animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Scintilla v0.1-dev</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:wght@400;700&family=Roboto:wght@400&family=Noto+Serif+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cactus+Classical+Serif&family=Cormorant+Garamond:wght@400;700&family=Roboto:wght@400&family=Noto+Serif+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -38,20 +38,85 @@
                 </figcaption>
             </figure>
         </section>
-        <section class="art-collection">
-            <figure>
-                <div><img src="assets/hug.webp"></div>
-                <figcaption>如果说时间是一个空间的定义词，或者说时间根本不存在</figcaption>
+        <section class="dream p1">
+            <figure class="assembly">
+                <img class="back" src="assets/dream/back.webp" alt="Сон">
+                <img class="middle" src="assets/dream/middle.webp" alt="Сон">
+                <img class="front" src="assets/dream/front.webp" alt="Сон">
             </figure>
-            <figure>
-                <figcaption>对于创作而言，痛苦意味着什么呢</figcaption>
-                <div><img src="assets/animism_studio.webp"></div>
-                <figcaption>或许是无尽的灵感</figcaption>
-            </figure>
-            <figure>
-                <figcaption>神秘而绝望的，癫狂的舞蹈，直至生命尽头</figcaption>
-                <div><img src="assets/Сон169.webp"></div>
-            </figure>
+            <h1 class="p1">¶Сон</h1>
+            <h1 class="p2">梦</h1>
+            <article class="multilingual">
+                <div class="p1">
+                    <div>
+                        <p>Я ужасный автор,</p>
+                        <p>Сегодня снова мечтаю.</p>
+                        <p>В данный момент не желаю слишком много думать,</p>
+                        <p>Это сплошной беспорядок работ.</p>
+                        <p>Таков ли смысл творчества?</p>
+                        <p>Душа творения заблудилась.</p>
+                    </div>
+                    <div>
+                        <p>Я - мечта играющего музыканта.</p>
+                        <p>Я - мечта писателя-романиста.</p>
+                        <p>Я - мечта, когда диск-рекордер засыпает.</p>
+                        <p>Я - мечта, когда Атлантида тонет.</p>
+                    </div>
+                    <div>
+                        <p>Сегодня я также пишу о пустых словах.</p>
+                        <p>Но мне все равно, нравлюсь я вам или нет.</p>
+                        <p>Я бы хотел,</p>
+                        <p>чтобы вы действительно ненавидели меня за мой недостаток гениальности.</p>
+                    </div>
+                </div>
+                <div class="p2">
+                    <div class="compressed">
+                        <p>我是一个三流作者</p>
+                        <p>我今天也在做着梦</p>
+                        <p>目前我并不想思考太多</p>
+                        <p>一团糟的作品</p>
+                        <p>创造就是这么回事吗</p>
+                        <p>作品的灵魂早就不知去了哪里</p>
+                    </div>
+                    <div>
+                        <p>我是一个音乐人演奏时做的</p>
+                        <p>我是一个小说家书写时做的</p>
+                        <p>我是一个碟片机睡着时做的</p>
+                        <p>我是一个亚特兰蒂斯沉没时候的</p>
+                    </div>
+                </div>
+            </article>
+            <article class="multilingual">
+                <div class="p1">
+                    <div>
+                        <p>Я - мечта умирающего бабочки во сне.</p>
+                        <p>Я - мечта холодного лунного света, падающего вниз.</p>
+                        <p>Я - мечта, когда призраки советского бурана рассеиваются.</p>
+                    </div>
+                    <div>
+                        <p>Жаль, что я уже не плачу.</p>
+                        <p>Тот, кому я мог доверять, давно ушел.</p>
+                        <p>Я бы хотел, чтобы вы действительно ненавидели меня за мой недостаток гениальности.</p>
+                    </div>
+                </div>
+                <div class="p2 vertical">
+                    <div class="compressed">
+                        <p>我今天也在写着意义不明的词</p>
+                        <p>不过我不在意你们喜不喜欢我了</p>
+                        <p>真希望你们能真切的去讨厌没有才能的我</p>
+                    </div>
+                    <div>
+                        <p>我是一只垂死蝴蝶睡着时做的梦</p>
+                        <p>我是一束冷淡月光坠落时做的梦</p>
+                        <p>我是苏联暴雪中幽灵消散时候的梦</p>
+                    </div>
+                    <div>
+                        <p>真可惜我也不再会流泪了</p>
+                        <p>能够相信的人早就不在</p>
+                        <p>真希望你们能真切的去讨厌没有才能的我</p>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
