--- a/index.html
+++ b/index.html
@@ -38,29 +38,39 @@
                 </figcaption>
             </figure>
         </section>
-        <section class="dream p1">
-            <figure class="assembly">
-                <img class="back" src="assets/dream/back.webp" alt="Сон">
-                <img class="middle" src="assets/dream/middle.webp" alt="Сон">
-                <img class="front" src="assets/dream/front.webp" alt="Сон">
-            </figure>
-            <h1 class="p1">¶Сон</h1>
-            <h1 class="p2">梦</h1>
-            <article class="multilingual">
-                <div class="p1">
-                    <div>
+        <section class="dream" style="--progress: 0;">
+            <div class="view">
+                <figure class="assembly">
+                    <img class="back" src="assets/dream/back.webp" alt="Сон">
+                    <img class="middle" src="assets/dream/middle.webp" alt="Сон">
+                    <img class="front" src="assets/dream/front.webp" alt="Сон">
+                </figure>
+                <h1 class="p1 show-char">¶Сон</h1>
+                <h1 class="p2">梦</h1>
+                <article class="multilingual">
+                    <div class="compressed">
                         <p>Я ужасный автор,</p>
+                        <span class="alt">我是一个三流作者</span>
                         <p>Сегодня снова мечтаю.</p>
+                        <span class="alt">我今天也在做着梦</span>
                         <p>В данный момент не желаю слишком много думать,</p>
+                        <span class="alt">目前我并不想思考太多</span>
                         <p>Это сплошной беспорядок работ.</p>
+                        <span class="alt">一团糟的作品</span>
                         <p>Таков ли смысл творчества?</p>
+                        <span class="alt">创造就是这么回事吗</span>
                         <p>Душа творения заблудилась.</p>
+                        <span class="alt">作品的灵魂早就不知去了哪里</span>
                     </div>
                     <div>
                         <p>Я - мечта играющего музыканта.</p>
+                        <span class="alt">我是一个音乐人演奏时做的</span>
                         <p>Я - мечта писателя-романиста.</p>
+                        <span class="alt">我是一个小说家书写时做的</span>
                         <p>Я - мечта, когда диск-рекордер засыпает.</p>
+                        <span class="alt">我是一个碟片机睡着时做的</span>
                         <p>Я - мечта, когда Атлантида тонет.</p>
+                        <span class="alt">我是一个亚特兰蒂斯沉没时候的</span>
                     </div>
                     <div>
                         <p>Сегодня я также пишу о пустых словах.</p>
@@ -68,26 +78,8 @@
                         <p>Я бы хотел,</p>
                         <p>чтобы вы действительно ненавидели меня за мой недостаток гениальности.</p>
                     </div>
-                </div>
-                <div class="p2">
-                    <div class="compressed">
-                        <p>我是一个三流作者</p>
-                        <p>我今天也在做着梦</p>
-                        <p>目前我并不想思考太多</p>
-                        <p>一团糟的作品</p>
-                        <p>创造就是这么回事吗</p>
-                        <p>作品的灵魂早就不知去了哪里</p>
-                    </div>
-                    <div>
-                        <p>我是一个音乐人演奏时做的</p>
-                        <p>我是一个小说家书写时做的</p>
-                        <p>我是一个碟片机睡着时做的</p>
-                        <p>我是一个亚特兰蒂斯沉没时候的</p>
-                    </div>
-                </div>
-            </article>
-            <article class="multilingual">
-                <div class="p1">
+                </article>
+                <article class="multilingual">
                     <div>
                         <p>Я - мечта умирающего бабочки во сне.</p>
                         <p>Я - мечта холодного лунного света, падающего вниз.</p>
@@ -98,31 +90,40 @@
                         <p>Тот, кому я мог доверять, давно ушел.</p>
                         <p>Я бы хотел, чтобы вы действительно ненавидели меня за мой недостаток гениальности.</p>
                     </div>
-                </div>
-                <div class="p2 vertical">
+                </article>
+                <article class="multilingual vertical">
                     <div class="compressed">
-                        <p>我今天也在写着意义不明的词</p>
-                        <p>不过我不在意你们喜不喜欢我了</p>
-                        <p>真希望你们能真切的去讨厌没有才能的我</p>
+                        <p></p>
+                        <span class="alt">我今天也在写着意义不明的词</span>
+                        <p></p>
+                        <span class="alt">不过我不在意你们喜不喜欢我了</span>
+                        <p></p>
+                        <span class="alt">真希望你们能真切的去讨厌没有才能的我</span>
                     </div>
                     <div>
-                        <p>我是一只垂死蝴蝶睡着时做的梦</p>
-                        <p>我是一束冷淡月光坠落时做的梦</p>
-                        <p>我是苏联暴雪中幽灵消散时候的梦</p>
+                        <p></p>
+                        <span class="alt">我是一只垂死蝴蝶睡着时做的梦</span>
+                        <p></p>
+                        <span class="alt">我是一束冷淡月光坠落时做的梦</span>
+                        <p></p>
+                        <span class="alt">我是苏联暴雪中幽灵消散时候的梦</span>
                     </div>
                     <div>
-                        <p>真可惜我也不再会流泪了</p>
-                        <p>能够相信的人早就不在</p>
-                        <p>真希望你们能真切的去讨厌没有才能的我</p>
+                        <p></p>
+                        <span class="alt">真可惜我也不再会流泪了</span>
+                        <p></p>
+                        <span class="alt">能够相信的人早就不在</span>
+                        <p></p>
+                        <span class="alt">真希望你们能真切的去讨厌没有才能的我</span>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
         <div>© 2024 KAMIHARI</div>
         <div>All Content Licensed by <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a></div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/index.js" type="module"></script>
 </body>
 </html>
