fix(css, assets): update assets and fix element position

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="dream" style="--progress: 0;">
             <div class="view">
                 <figure class="assembly">
-                    <img class="back disk" src="assets/dream/disk.webp" alt="Сон">
+                    <img class="disk" src="assets/dream/disk.webp" alt="Сон">
                     <img class="back" src="assets/dream/back.webp" alt="Сон">
                     <img class="middle" src="assets/dream/middle.webp" alt="Сон">
                     <img class="front" src="assets/dream/front.webp" alt="Сон">
