feat(index): implement animism section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,71 @@
                 </article>
             </div>
         </section>
+        <section class="animism" style="--progress: 0;">
+            <div class="view">
+                <picture id="animism-pic">
+                    <img id="animism-line" src="assets/animism/line.svg" alt="Animism Line" loading="lazy">
+                    <img id="animism-spiral" src="assets/animism/golden_spiral.svg" alt="Animism Logo" loading="lazy">
+                    <img id="animism-img" src="assets/animism/animism.webp" alt="Animism">
+                </picture>
+                <article>
+                    <div>
+                        <span>
+                            <p>我们都身处暗流之中，只要我们在创作，人与人就是相连的，但是人永远是</p>
+                            <p class="spaced"><strong>孤独</strong>的 赋予所有生物、自然现象，甚至无生命的物体以灵性的意义</p>
+                        </span>
+                        <span class="vertical">
+                            <p>Ephemera</p>
+                            <p>Paracosm</p>
+                            <p>Saros</p>
+                        </span>
+                    </div>
+                    <div>
+                        <span class="vertical">
+                            <p class="filled"></p>
+                            <p>Solitude</p>
+                            <p>Loneliness</p>
+                        </span>
+                    </div>
+                    <div class="indented">
+                        <span class="spaced">
+                            <p>Within me, within this place</p>
+                            <p>Lingers the proof</p>
+                            <p>Stories retold</p>
+                            <p>Silence's sea</p>
+                            <p>To repeat again the path of ruin</p>
+                            <p>Surpassing the worldly tenacity</p>
+                        </span>
+                        <span class="vertical">
+                            <p>Sprit</p>
+                            <p>Essence</p>
+                            <p>Psyche</p>
+                            <p class="filled">Consciousness</p>
+                        </span>
+                    </div>
+                    <div class="logo">
+                        <img id="animism-logo" src="assets/animism/logo.svg" alt="Animism Logo" loading="lazy">
+                        <span>NIMISM</span>
+                    </div>
+                    <div>
+                        <span>
+                            <p>而在创作属于自己作品时，可以说是给予了作品<strong>生命</strong>与<strong>灵魂</strong></p>
+                        </span>
+                    </div>
+                    <div>
+                        <span class="filled">
+                            <p class="filled"></p>
+                            <p class="filled"></p>
+                        </span>
+                        <span class="indented delayed">
+                            <p>Existence</p>
+                            <p>Animation</p>
+                            <p>Being</p>
+                        </span>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
         <div>© 2024 KAMIHARI</div>
