feat(index): implement hug section

--- a/index.html
+++ b/index.html
@@ -185,6 +185,25 @@
                 </article>
             </div>
         </section>
+        <section class="hug" style="--progress: 0;">
+            <div class="view">
+                <article>
+                    <h1 class="pixel inverted">Q<span>uiz</span></h1>
+                    <div class="vertical">
+                        <p>自坐标轴原点而生</p>
+                        <p>徘徊于无法突破的 1 与 0 之间规整空间，属于一位自然数</p>
+                        <p>孤独的舞蹈</p>
+                        <p>在宇宙尽头彼此拥抱吧，尽管我们已然失去了视力，但是</p>
+                        <p>至少我们还能接触到彼此，我想知道你的</p>
+                    </div>
+                    <h1 class="vertical"><ruby>触<rt>Touch</rt>感<rt>Feeling</rt></ruby></h1>
+                    <h1 class="braille">⠼⠁⠁</h1>
+                </article>
+                <img id="hug-bg" src="assets/hug/bg.webp" alt="Hug">
+                <img id="hug-flower" src="assets/hug/flower.webp" alt="Hug Flower">
+                <img id="hug-character" src="assets/hug/character.webp" alt="Hug Character">
+            </div>
+        </section>
     </main>
     <footer>
         <div>© 2024 KAMIHARI</div>
